ferritin/src/snapshots/ferritin__tests__get_std_tty_mode.snap
---
source: ferritin/src/tests.rs
expression: "render_for_tests_rooted(Commands::get(\"std\"), OutputMode :: Tty, &\nget_fixture_crate_path ())"
---
Could not find 'std'

Did you mean:

  ◦ fixture-crate
