ferritin/src/snapshots/ferritin__tests__get_struct_details_ai_mode.snap
---
source: ferritin/src/tests.rs
expression: "render_for_tests_rooted(Commands::get(\"crate::TestStruct\"), OutputMode :: Ai,\n& get_fixture_crate_path ())"
---
Struct fixture_crate::TestStruct — in fixture-crate (0.1.0)

A simple struct for testing basic functionality.

This struct demonstrates basic usage patterns and should show completely since it only has one paragraph of documentation.

It uses Vector for testing intra-doc link resolution with renamed imports. Also tests HashMap which is a non-renamed import.

struct TestStruct {
    pub field: String,
    pub count: u32,
    private_field: bool,
}

## Fields

- field: String — A public field
- count: u32 — Another public field
- private_field: bool — A private field

## Methods

- pub const ASSOCIATED_CONST — This is an associated constant for a struct
- pub fn new(field: String, count: u32) -> Self — Create a new TestStruct
- pub fn get_field(&self) -> &str — Get the field value
- pub fn increment_count(&mut self) — Update the count

## Trait Implementations

TestTrait<T = String>

std: From<T>, RefUnwindSafe, UnwindSafe, Unpin, Clone, UnsafeUnpin, Freeze, Sync, Debug, Send

- impl<T: 'static + ?Sized> Any
- impl<T, U: Into<T>> TryFrom<U> — type Error = Infallible
- impl<T, U: TryFrom<T>> TryInto<U> — type Error = <U as TryFrom<T>>::Error
- impl<T, U: From<T>> Into<U>
- impl<T: Clone> CloneToUninit
- impl<T: ?Sized> BorrowMut<T>
- impl<T: ?Sized> Borrow<T>
- impl<T: Clone> ToOwned — type Owned = T
